# image_resize

./: .gitignore  README.md  pyproject.toml
image_resize/: __main__.py
